--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,8 @@ $Id$
 Attributions apply to all preceding items up to the next blank line.
 Unattributed items are by Paul Warren and Chris Lightfoot.
 
-0.14
+0.14 06/09/03
+* Added forking resolver as fall-back resolver
 * Fixed DNS resolution so that no lookups are done if options.dns_resolution ==
   0
 * Configure/compilation fixes for Mac OS X 
