--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@ $Id$
 Attributions apply to all preceding items up to the next blank line.
 Unattributed items are by Paul Warren and Chris Lightfoot.
 
+* Fixed the search for libpcap in the configure script
+    Thomas Schwinge <tschwinge@gmx.net>
+
 0.14 06/09/03
 * Added forking resolver as fall-back resolver
 * Fixed DNS resolution so that no lookups are done if options.dns_resolution ==
