--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,11 @@ $Id$
 Attributions apply to all preceding items up to the next blank line.
 Unattributed items are by Paul Warren and Chris Lightfoot.
 
+0.15
+* Added linear bar scales (default) ("L")
+* Added fixed upper limit for bandwidth
+* Choose which average bars display ("B")
+
 * Fixed the search for libpcap in the configure script
     Thomas Schwinge <tschwinge@gmx.net>
 
