--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,9 @@ Unattributed items are by Paul Warren and Chris Lightfoot.
 0.16 
 * Fix for pthread.c behaviour on Solaris.
 
+* Build fixes for gcc 3.4+
+    Henne Vogelsang <hvogel@suse.de>
+
 * Fixed behaviour of -n and -N options
     Klaus Sperner <klaus@heaven.escape.de>
 
