--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@ $Id$
 Attributions apply to all preceding items up to the next blank line.
 Unattributed items are by Paul Warren and Chris Lightfoot.
 
+0.17
+* Fixed segfault bug in config file handling.
+
 0.16 28/02/04
 * Added support for DLT_NULL
 * Fix for pthread.c behaviour on Solaris.
