--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,7 @@ Unattributed items are by Paul Warren and Chris Lightfoot.
 
 0.17
 * Fixed segfault bug in config file handling.
-* Added support for ppp interfaces
+* Added support for ppp interfaces on FreeBSD (and others using DLT_PPP)
 
 0.16 28/02/04
 * Added support for DLT_NULL
