--- a/ChangeLog
+++ b/ChangeLog
@@ -4,10 +4,14 @@ $Id$
 Attributions apply to all preceding items up to the next blank line.
 Unattributed items are by Paul Warren and Chris Lightfoot.
 
+0.18
+* Various typos in the UI
+    Gerben Roest <g.roest@grepit.nl>
+
+0.17 12/02/06
 * Display top scale in bytes when measuring in bytes
     Marcin Kryczek <mkay@gentoo.org>
 
-0.17
 * Added support for ppp interfaces on FreeBSD (and others using DLT_PPP)
 
 * Fixed segfault bug in config file handling.
