Fix for armeb bug.

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@ Unattributed items are by Paul Warren and Chris Lightfoot.
     Gerben Roest <g.roest@grepit.nl>
 * Documentation fixes
     A. Costa <agcosta@gis.net> (via Debian)
+* Fix for armeb specific bug
+    Lennert Buytenhek <buytenh+debian@wantstofly.org> (via Debian)
 
 0.17 12/02/06
 * Display top scale in bytes when measuring in bytes
