--- a/ChangeLog
+++ b/ChangeLog
@@ -7,18 +7,35 @@ Unattributed items are by Paul Warren and Chris Lightfoot.
 0.18
 * Various typos in the UI
     Gerben Roest <g.roest@grepit.nl>
+
 * Documentation fixes
     A. Costa <agcosta@gis.net> (via Debian)
+
 * Fix for armeb specific bug
     Lennert Buytenhek <buytenh+debian@wantstofly.org> (via Debian)
+
 * Fix frozen order drives line totals crazy.
     Max Alekseyev <relf@os2.ru> (via Debian)
+
 * Fix for crash on arm.
     Joey Hess <joeyh@debian.org> (via Debian)
+
 * Fixed behaviour of "-b" option.
     Eric Cooper <ecc@cmu.edu> (via Debian)
+
 * Support for PFLOG Interfaces
     Richard Tóth <risko@iklub.sk>
+
+* Support for IPv6
+* Fix for performance issue with address hashing
+* Fix for failing link address detection for GNU/kfreebsd
+    Mats Erik Andersson <mats.andersson@gisladisker.se>
+
+* Improved behaviour of sort in sent/recv only mode
+    Damián Viano <des@debian.org>
+
+* Fixed segfault / hang when supplying multiple -i options
+
 
 0.17 12/02/06
 * Display top scale in bytes when measuring in bytes
