Added missing docs for -m option. Noticed by Toralf Förster <toralf.foerster@gmx.de>

--- a/iftop.8
+++ b/iftop.8
@@ -72,6 +72,9 @@ The default is not to display that address category.
 \fB-b\fP
 Don't display bar graphs of traffic. 
 .TP
+\fB-m\fP \fIlimit\fP
+Set the upper limit for the bandwidth scale.  Specified as a number with a 'K', 'M' or 'G' suffix.
+.TP
 \fB-B\fP
 Display bandwidth rates in bytes/sec rather than bits/sec.
 .TP
