--- a/AUTHORS
+++ b/AUTHORS
@@ -1,11 +1,7 @@
-Another file that automake insists on.
-
-Written by
+Originally written by:
 
 Paul Warren, pdw@ex-parrot.com
 Chris Lightfoot, chris@ex-parrot.com
 
-Mangled for Solaris by
-
-Jonathan Abbey, jonabbey@ganymeta.org
+Other contributors are acknolwedged in ChangeLog.
 
