Man page documentation of -t mode. Compile time warning fixes. Markus Koschany <apo@gambaru.de>

--- a/iftop.8
+++ b/iftop.8
@@ -100,6 +100,10 @@ bitmasking.
 \fB-c\fP \fIconfig file\fP
 Specifies an alternate config file.  If not specified, iftop will use
 \fB~/.iftoprc\fP if it exists.  See below for a description of config files
+.TP
+\fB-t\fP \fItext output mode\fP
+Use text interface without ncurses and print the output to STDOUT.
+
 
 .SH DISPLAY
 
