--- a/AUTHORS
+++ b/AUTHORS
@@ -3,5 +3,5 @@ Originally written by:
 Paul Warren, pdw@ex-parrot.com
 Chris Lightfoot, chris@ex-parrot.com
 
-Other contributors are acknolwedged in ChangeLog.
+Other contributors are acknowledged in ChangeLog.
 
