Fix mac address display
iftop would display portions of mac address with large ffffff prefixes.
Make if_hw_addr type consistent.  Kevin Darbyshire-Bryant <kevin@darbyshire-bryant.me.uk>

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@ Unattributed items are by Paul Warren and Chris Lightfoot.
 
 1.0
 
+* Fix MAC address display
+    Kevin Darbyshire-Bryant <kevin@darbyshire-bryant.me.uk>
+
 * Clean up libpcap on exit
     Brian Russell <brian.russell@brocade.com>
 
