Fix handling of packets that are too short to be valid - Frédéric Perrin <fperrin@brocade.com>
When packets that are too short to be valid IP packets happen to start
with 0x45 or 0x60, iftop will still try to read source and destination
addresses, which will usually just be random garbage.

Note the assumption about what libpcap guarantees in the comments to
handle_ip_packet():

    * It is assumed that the snaplen (currently hard-coded to 1000) is
    * big enough to always capture the IP header past the L2 encap, and
    * that pcap never truncates the packet to less than snaplen; in
    * other words, that pcaphdr->caplen = MIN(pcaphdr->len, snaplen).

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@ Unattributed items are by Paul Warren and Chris Lightfoot.
 
 1.0
 
+* Fix handling of short packets
+    Frédéric Perrin <fperrin@brocade.com>
+
 * Fix MAC address display
     Kevin Darbyshire-Bryant <kevin@darbyshire-bryant.me.uk>
 
