--- a/iftop.8
+++ b/iftop.8
@@ -106,6 +106,11 @@ Specifies an alternate config file.  If not specified, iftop will use
 .TP
 \fB-t\fP \fItext output mode\fP
 Use text interface without ncurses and print the output to STDOUT.
+.TP
+\fB-S port\fP \fIREST service mode\fP
+Accept HTTP GET requests on specified port and provide a minimal REST
+API at /iftop/history and /iftop/version; it will not start text or curses
+mode.
 
 
 .SH DISPLAY
